--- a/index.html
+++ b/index.html
@@ -4,41 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Vue.js</title>
-  <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
-  <link rel="stylesheet" href="style.css">
+  <title>Vue组件</title>
 </head>
 <body>
-  <!-- #vue-app为根容器 -->
-  <div id="vue-app">
-    <!-- <h1>属性绑定</h1>
-    <p>name:{{ name }}</p>
-    <p>work:{{ work }}</p>
-    <p>{{sayHello()}}</p>
-    <a v-bind:href="web">baidu</a>
-    <input type="text" v-bind:value="name">
-    <p v-html='webtag'></p>
-    <h1>EVENTS</h1>
-    <button @click.once='add(1)'>增加一岁</button>
-    <button v-on:click='sub(1)'>减一岁</button>
-    <button v-on:dblclick='add(10)'>增加十岁</button>
-    <button v-on:dblclick='sub(10)'>减十岁</button>
-    <p>My age is {{age}}</p>
-    <div class="canvas" v-on:mousemove='XY'>X:{{x}}--Y:{{y}}-- <span v-on:mousemove.stop=''>stop moving</span></div>
-    <a v-on:click.prevent='alert()' href="https://www.baidu.com">baidu</a>
-    <h1>键盘EVENT</h1>
-    <label>姓名：</label>
-    <input type="text" v-on:keyup.enter='logName'>
-    <label>年龄：</label>
-    <input type="text" v-on:keyup='logAge'> -->
-    <h1>双向数据绑定 / input / select / textarea</h1>
-    <label>姓名：</label>
-    <input ref='n' type="text" v-on:keyup='logName'>
-    <span>{{name}}</span>
-    <label>年龄：</label>
-    <input type="text" v-model='age'>
-    <span>{{age}}</span>
-  </div>
-  <script src="app.js"></script>
+  <h1></h1>
+  
 </body>
 </html>
