--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Vue组件</title>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
 </head>
 <body>
-  <h1></h1>
-  
+  <h1>初识Vue组件</h1>
+  <div id="vue-app">
+    <greeting></greeting>
+  </div>
+<script src="app.js"></script>  
 </body>
 </html>
